--- a/source/stylesheets/styles.css
+++ b/source/stylesheets/styles.css
@@ -121,7 +121,7 @@ iframe {
   border-top: 10px solid #778492;
 }
 .header .btn {
-  margin-top: 60px;
+  margin-top: 10px;
   font-weight: bold;
 }
 .header .profile-image {
